# smoked-salmon

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  UPGRADING.md  config.default.toml  config.py.txt  config.sample.toml  fork_versioning.py  pyproject.toml  requirements.txt  run.py
.github/: dependabot.yml  fork-versioning.toml
.github/workflows/: build-alpha.yml  docker-image.yml  docker_release.yml  lint.yml  publish-release.yml
data/: config.default.toml  version.py  version.toml
salmon/: __init__.py  commands.py  constants.py  database.py  errors.py  play.py  release_notification.py
salmon/checks/: __init__.py  integrity.py  logs.py  mqa.py  upconverts.py
salmon/checks/mqa/: __init__.py  flac.py
salmon/common/: __init__.py  constants.py  figles.py  files.py  strings.py
salmon/config/: __init__.py  validations.py
salmon/converter/: __init__.py  downconverting.py  m3ercat.py  transcoding.py
salmon/images/: __init__.py  base.py  catbox.py  emp.py  imgbb.py  imgbox.py  oeimg.py  ptpimg.py  ptscreens.py
salmon/qbittorrent/: qbittorrentapi.py
salmon/rutorrent/: rutorrent.py
salmon/search/: __init__.py  apple_music.py  bandcamp.py  base.py  beatport.py  deezer.py  discogs.py  itunes.py  junodownload.py  musicbrainz.py  qobuz.py  tidal.py
salmon/sources/: __init__.py  apple_music.py  bandcamp.py  base.py  beatport.py  deezer.py  discogs.py  itunes.py  junodownload.py  musicbrainz.py  qobuz.py  tidal.py
salmon/tagger/: __init__.py  audio_info.py  combine.py  cover.py  foldername.py  folderstructure.py  metadata.py  pre_data.py  retagger.py  review.py  tagfile.py  tags.py
salmon/tagger/sources/: __init__.py  bandcamp.py  base.py  beatport.py  deezer.py  discogs.py  itunes.py  junodownload.py  musicbrainz.py  qobuz.py  tidal.py
salmon/trackers/: __init__.py  base.py  dic.py  ops.py  red.py  sm.py
salmon/uploader/: __init__.py  dupe_checker.py  preassumptions.py  request_checker.py  seedbox.py  spectrals.py  torrent_client.py  upload.py
salmon/web/: __init__.py  spectrals.py
salmon/web/static/css/: main.css
salmon/web/static/scripts/: theme.js
salmon/web/templates/: layout.html  spectrals.html
src/salmon/: __init__.py  commands.py  constants.py  database.py  errors.py  play.py  proxy.py  release_notification.py  run.py
src/salmon/checks/: logs.py  tags.py  upconverts.py
src/salmon/common/: __init__.py  aliases.py  constants.py  regexes.py
src/salmon/config/: __init__.py  validations.py
src/salmon/converter/: __init__.py  downconverting.py  transcoding.py
src/salmon/data/: config.default.toml  version.toml
src/salmon/images/: __init__.py  base.py  catbox.py  imgbb.py  imgbox.py  oeimg.py  ptpimg.py  ptscreens.py  ra.py
src/salmon/search/: base.py  beatport.py  musicbrainz.py  qobuz.py  tidal.py
src/salmon/sources/: __init__.py  apple_music.py  bandcamp.py  base.py  beatport.py  deezer.py  discogs.py  qobuz.py  tidal.py
src/salmon/tagger/: __init__.py  combine.py  foldername.py  folderstructure.py  metadata.py  pre_data.py  retagger.py  review.py
src/salmon/tagger/sources/: apple_music.py  bandcamp.py  beatport.py  musicbrainz.py
src/salmon/trackers/: __init__.py  base.py  dic.py  ops.py  red.py
src/salmon/uploader/: __init__.py  dupe_checker.py  preassumptions.py  request_checker.py  seedbox.py  spectrals.py  upload.py
src/salmon/web/: __init__.py  spectrals.py
tests/: test_fork_versioning.py  test_release_notification.py  test_sources_bandcamp.py  test_tagger_bandcamp.py  test_tagger_combine.py  test_tagger_metadata_source_url.py  test_trackers_base.py  test_trackers_cli.py  test_trackers_ops.py  test_trackers_red.py  test_uploader_automation_flags.py  test_uploader_seedbox.py  test_uploader_upload.py
