[project]
name = "salmon"
version = "0.9.3.5"
description = "An uploading script for Gazelle-based music trackers."
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0",
    "click>=8.1.7",
    "bs4>=0.0.1",
    "dottorrent>=1.10.1",
    "musicbrainzngs>=0.7.1",
    "mutagen>=1.47.0",
    "pyperclip>=1.8.2",
    "aiohttp>=3.8.5",
    "aiohttp-jinja2>=1.5.1",
    "jinja2>=3.1.2",
    "pyimgurapi>=0.4.3",
    "bitstring>=4.1.2",
    "heybrochecklog>=1.3.2",
    "ratelimit>=2.2.1",
    "rich>=13.5.3",
    "unidecode>=1.3.8",
    "setuptools>=68.0.0",
    "wheel>=0.45.1",
    "httpx>=0.28.1",
    "tqdm>=4.67.1",
    "filetype>=1.2.0",
    "qbittorrent-api>=2025.2.0",
    "send2trash>=1.8.3",
]

[project.scripts]
salmon = "run:main"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["salmon"]
py-modules = ["run", "config"]

[dependency-groups]
dev = [
    "ruff>=0.11.2",
]

[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = ["data/version.py"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
