[project]
name = "salmon"
version = "0.9.7.4"
description = "An uploading script for Gazelle-based music trackers."
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "click>=8.1.7",
    "beautifulsoup4[lxml]>=4.13.0",
    "musicbrainzngs>=0.7.1",
    "mutagen>=1.47.0",
    "pyperclip>=1.8.2",
    "aiohttp[speedups]>=3.8.5",
    "aiohttp-jinja2>=1.5.1",
    "jinja2>=3.1.2",
    "bitstring>=4.1.2",
    "ratelimit>=2.2.1",
    "unidecode>=1.3.8",
    "tqdm>=4.67.1",
    "filetype>=1.2.0",
    "qbittorrent-api>=2025.2.0",
    "send2trash>=1.8.3",
    "platformdirs>=4.3.8",
    "msgspec[toml]>=0.20.0",
    "torf>=4.3.0",
    "transmission-rpc>=7.0.0",
    "deluge-client>=1.10.2",
    "pyoxipng>=9.1.0",
    "pycambia>=0.1.0",
    "ffmpeg-python>=0.2.0",
    "humanfriendly>=10.0",
    "pillow>=11.3.0",
    "pyimgbox>=1.0.7",
]

[project.scripts]
salmon = "run:main"

[build-system]
requires = ["setuptools >= 61.0", "setuptools-scm >= 8"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["salmon", "data"]
py-modules = ["run"]

[dependency-groups]
dev = [
    "ruff>=0.11.2",
]

[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = ["data/version.py"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
